--- a/app/src/main/res/layout-land/activity_currency_converter.xml
+++ b/app/src/main/res/layout-land/activity_currency_converter.xml
@@ -9,10 +9,18 @@
     android:textAlignment="center"
     tools:context=".CurrencyConverterActivity">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
     <Button
         android:id="@+id/Button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:shadowColor="#393939"
         android:text="@string/MainButton"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -22,58 +30,58 @@
         app:cornerRadius="12sp"
         app:icon="@android:drawable/ic_popup_sync"
         app:iconPadding="6dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivGoldenTemple" />
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/editTextUSD" />
 
     <EditText
         android:id="@+id/tvINR"
         android:layout_width="164dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="316dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="@string/convertedINR"
         android:inputType="number"
         android:textAlignment="center"
         android:textColor="#73000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextUSD"
         android:layout_width="164dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="268dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="@string/enterUSD"
         android:inputType="number"
         android:textAlignment="center"
         android:textColor="#6B000000"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.881"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="17dp"
         android:layout_height="24dp"
+        android:layout_marginTop="16dp"
         android:background="#070707"
-        app:layout_constraintBottom_toTopOf="@+id/Button1"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivGoldenTemple"
-        app:layout_constraintVertical_bias="0.591"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/tvINR"
         app:srcCompat="@android:drawable/stat_notify_sync" />
 
     <ImageView
-        android:id="@+id/ivGoldenTemple"
-        android:layout_width="match_parent"
+        android:id="@+id/ivTajmahal"
+        android:layout_width="0dp"
+        android:scaleType="centerCrop"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/jovyn_chamb_iwmfiinivp4_unsplash" />
@@ -82,10 +90,10 @@
         android:id="@+id/resultTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/tvresult"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88" />
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/Button1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
