--- a/app/src/main/res/layout-land/activity_currency_converter.xml
+++ b/app/src/main/res/layout-land/activity_currency_converter.xml
@@ -94,7 +94,8 @@
         android:gravity="center_horizontal"
         android:text="@string/btConvert"
         android:textSize="25sp"
-        app:icon="@android:drawable/ic_menu_revert"
+        style="@style/Widget.MaterialComponents.Button"
+        app:icon="@android:drawable/ic_popup_sync"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/tvResult" />
